<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialogBackground">
        <EditText
            android:id="@+id/random_search_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/random_search_departure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Space
                android:id="@+id/middle"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:layout_centerInParent="true"/>
            <Button
                android:id="@+id/continue_random_search"
                android:layout_toLeftOf="@id/middle"
                android:text="search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/cancel_random_search"
                android:layout_toRightOf="@id/middle"
                android:text="cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>