<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:background="@color/backgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.justinwells.mytravelproject.Activities.MainActivity">
    <LinearLayout
        android:id="@+id/home_screen"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <android.support.v7.widget.CardView
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/clickable_card_background">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/clickable_card_background">

                <TextView
                    android:text="SEARCH FOR A DESTINATION"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:id="@+id/textView" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"/>
        <android.support.v7.widget.CardView
            android:id="@+id/no_destination_search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/clickable_card_background">
            <RelativeLayout
                android:background="@drawable/clickable_card_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="JUST GET ME OUT OF HERE"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textAlignment="center"
                    android:id="@+id/textView2" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_screen"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_above="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:text="PLEASE WAIT"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</FrameLayout>

