<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialogBackground"
        android:padding="8dp">

        <EditText
            android:id="@+id/direct_search_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/continue_direct_search"
                android:text="search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Space
                android:id="@+id/middle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="10dp"/>
            <Button
                android:id="@+id/cancel_direct_search"
                android:text="cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>